--- a/src/app/styles/styles.scss
+++ b/src/app/styles/styles.scss
@@ -1,5 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
 // Bootstrap and its default variables
 @import "~bootstrap/scss/bootstrap";
 
@@ -9,4 +7,7 @@ $fa-font-path: "/assets/webfonts";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/regular";
 @import "~@fortawesome/fontawesome-free/scss/brands";
+
+// Global styles
+
 
