--- a/src/app/content/search/search.component.scss
+++ b/src/app/content/search/search.component.scss
@@ -1,6 +1,6 @@
 .wrapper {
   background: url("../../../assets/img/bg_default.png") repeat 0 0 transparent;
-  height: 100%;
+  min-height: 100vh;
 
   .floor-plan-container {
     width: 100%;
