--- a/src/app/content/search/search.component.html
+++ b/src/app/content/search/search.component.html
@@ -1,7 +1,7 @@
 <div id="wrapper">
   <div id="content-wrapper" class="d-flex flex-column">
     <h3 class="text-center pt-3 mb-5">
-      Iskanje gradiva
+      Lokator gradiva
     </h3>
 
     <div class="floor-plan-container" [ngClass]="{ 'zoom-out': !zoomedIn }"
