--- a/src/app/content/admin/admin.component.html
+++ b/src/app/content/admin/admin.component.html
@@ -196,13 +196,15 @@
 <!--          <div class="topbar-divider d-none d-sm-block"></div>-->
 
           <!-- Nav Item - User Information -->
-<!--          <li class="nav-item dropdown no-arrow">-->
-<!--            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-<!--              <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>-->
-<!--              <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">-->
-<!--            </a>-->
-<!--            &lt;!&ndash; Dropdown - User Information &ndash;&gt;-->
-<!--            <div class="dropdown-menu dropdown-menu-right shadow animated&#45;&#45;grow-in" aria-labelledby="userDropdown">-->
+          <li class="nav-item dropdown no-arrow" dropdown>
+            <a class="nav-link dropdown-toggle" id="userDropdown" role="button" dropdownToggle>
+              <span class="mr-2 d-none d-lg-inline text-gray-600 small">
+                {{authenticatedUser?.name}}
+              </span>
+              <img class="img-profile rounded-circle" ngxGravatar [email]="authenticatedUser?.username">
+            </a>
+            <!-- Dropdown - User Information -->
+            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" *dropdownMenu>
 <!--              <a class="dropdown-item" href="#">-->
 <!--                <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>-->
 <!--                Profile-->
@@ -211,17 +213,13 @@
 <!--                <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>-->
 <!--                Settings-->
 <!--              </a>-->
-<!--              <a class="dropdown-item" href="#">-->
-<!--                <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>-->
-<!--                Activity Log-->
-<!--              </a>-->
 <!--              <div class="dropdown-divider"></div>-->
-<!--              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">-->
-<!--                <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>-->
-<!--                Logout-->
-<!--              </a>-->
-<!--            </div>-->
-<!--          </li>-->
+              <a class="dropdown-item" [routerLink]="" (click)="logout()">
+                <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                Logout
+              </a>
+            </div>
+          </li>
 
         </ul>
 
