--- a/src/app/content/login/login.component.html
+++ b/src/app/content/login/login.component.html
@@ -2,9 +2,11 @@
 
   <!-- Outer Row -->
   <div class="row justify-content-center">
+    <div class="col-12 text-center">
+      <h1 class="mt-5 text-white">Lokator gradiva</h1>
+    </div>
 
     <div class="col-6">
-
       <div class="card o-hidden border-0 shadow-lg my-5">
         <div class="card-body p-0">
           <!-- Nested Row within Card Body -->
