--- a/src/app/content/admin/libraries/details/floors/details/details.component.html
+++ b/src/app/content/admin/libraries/details/floors/details/details.component.html
@@ -70,12 +70,12 @@
                     </div>
                   </div>
 
-<!--                  <div class="col-12 mt-2"> TODO -->
+<!--                  <div class="col-12 mt-2">-->
 <!--                    <div>-->
-<!--                      <button type="button" class="btn btn-secondary mr-2">-->
+<!--                      <button type="button" class="btn btn-secondary mr-2" (click)="previousRack()">-->
 <!--                        <i class="fa fa-arrow-left"></i>-->
 <!--                      </button>-->
-<!--                      <button type="button" class="btn btn-secondary">-->
+<!--                      <button type="button" class="btn btn-secondary" (click)="nextRack()">-->
 <!--                        <i class="fa fa-arrow-right"></i>-->
 <!--                      </button>-->
 <!--                    </div>-->
