--- a/src/app/content/search/search.component.html
+++ b/src/app/content/search/search.component.html
@@ -6,6 +6,9 @@
 
     <div class="floor-plan-container" [ngClass]="{ 'zoom-out': !zoomedIn }"
          [inlineSVG]="floorPlanUrl" (onSVGInserted)="processFloorPlan()">
+      <span class="d-block text-center">
+        <i class="fa fa-circle-notch fa-3x fa-spin"></i>
+      </span>
     </div>
   </div>
 </div>
