--- a/src/app/content/search/search.component.html
+++ b/src/app/content/search/search.component.html
@@ -1,8 +1,19 @@
 <div id="wrapper">
   <div id="content-wrapper" class="d-flex flex-column">
-    <h3 class="text-center pt-3 mb-5">
+    <h3 class="text-center pt-3 mb-3">
       Lokator gradiva
     </h3>
+
+    <div class="row">
+      <div class="col-lg-9 offset-lg-3 col-md-8 offset-md-2 col-sm-10 offset-sm-1">
+        <em>Lokacija</em>: <strong>{{library.name}} - {{floor.name}}</strong>
+      </div>
+    </div>
+    <div class="row mb-4">
+      <div class="col-lg-9 offset-lg-3 col-md-8 offset-md-2 col-sm-10 offset-sm-1">
+        <em>UDK</em>: <strong>{{U}}</strong>
+      </div>
+    </div>
 
     <div class="floor-plan-container" [ngClass]="{ 'zoom-out': !zoomedIn }"
          [inlineSVG]="floorPlanUrl" (onSVGInserted)="processFloorPlan()">
