--- a/src/app/content/admin/admin.component.html
+++ b/src/app/content/admin/admin.component.html
@@ -36,6 +36,14 @@
         <i class="fas fa-fw fa-building"></i>
         <span>Knjižnice</span></a>
     </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider d-none d-md-block">
+
+    <!-- Sidebar Toggler (Sidebar) -->
+    <div class="text-center d-none d-md-inline">
+      <button class="rounded-circle border-0" id="sidebarToggle"></button>
+    </div>
   </ul>
   <!-- End of Sidebar -->
 
