--- a/src/app/content/admin/admin.component.html
+++ b/src/app/content/admin/admin.component.html
@@ -224,7 +224,7 @@
 <!--              <div class="dropdown-divider"></div>-->
               <a class="dropdown-item" [routerLink]="" (click)="logout()">
                 <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                Logout
+                Odjava
               </a>
             </div>
           </li>
@@ -262,6 +262,6 @@
 <!-- End of Page Wrapper -->
 
 <!-- Scroll to Top Button-->
-<!--<a class="scroll-to-top rounded" href="#page-top">-->
-<!--  <i class="fas fa-angle-up"></i>-->
-<!--</a>-->
+<a class="scroll-to-top rounded" href="">
+  <i class="fas fa-angle-up"></i>
+</a>
