fixed navigation issues

--- a/src/app/content/admin/libraries/details/view/view.component.html
+++ b/src/app/content/admin/libraries/details/view/view.component.html
@@ -3,7 +3,7 @@
   <h1 class="h3 mb-0 text-gray-800">
     {{library.name}} ({{library.code}})
   </h1>
-  <a routerLink="../floors/add" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+  <a routerLink="./floors/add" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
     <i class="fas fa-plus fa-sm text-white-50"></i>
     &nbsp;Dodaj nadstropje
   </a>
