--- a/src/app/content/admin/dashboard/dashboard.component.html
+++ b/src/app/content/admin/dashboard/dashboard.component.html
@@ -6,78 +6,114 @@
 <!-- Content Row -->
 <div class="row">
 
-  <!-- Earnings (Monthly) Card Example -->
-  <div class="col-xl-3 col-md-6 mb-4">
+  <div class="col-xl-4 col-md-6 mb-4">
     <div class="card border-left-primary shadow h-100 py-2">
       <div class="card-body">
         <div class="row no-gutters align-items-center">
           <div class="col mr-2">
-            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Earnings (Monthly)</div>
-            <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
-          </div>
-          <div class="col-auto">
-            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Iskanja v prejšnjem mesecu</div>
+            <div class="h5 mb-0 font-weight-bold text-gray-800">{{ statistics.previousMonthCount }}</div>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Earnings (Monthly) Card Example -->
-  <div class="col-xl-3 col-md-6 mb-4">
-    <div class="card border-left-success shadow h-100 py-2">
+  <div class="col-xl-4 col-md-6 mb-4">
+    <div class="card border-left-primary shadow h-100 py-2">
       <div class="card-body">
         <div class="row no-gutters align-items-center">
           <div class="col mr-2">
-            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Earnings (Annual)</div>
-            <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
-          </div>
-          <div class="col-auto">
-            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Iskanja v tekočem mesecu</div>
+            <div class="h5 mb-0 font-weight-bold text-gray-800">{{ statistics.thisMonthCount }}</div>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Earnings (Monthly) Card Example -->
-  <div class="col-xl-3 col-md-6 mb-4">
-    <div class="card border-left-info shadow h-100 py-2">
+  <div class="col-xl-4 col-md-6 mb-4">
+    <div class="card border-left-primary shadow h-100 py-2">
       <div class="card-body">
         <div class="row no-gutters align-items-center">
           <div class="col mr-2">
-            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Tasks</div>
-            <div class="row no-gutters align-items-center">
-              <div class="col-auto">
-                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%</div>
-              </div>
-              <div class="col">
-                <div class="progress progress-sm mr-2">
-                  <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
+            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Trend mesečnega iskanja</div>
+            <div class="h5 mb-0 font-weight-bold"
+                 [ngClass]="{ 'text-success': statistics.monthCountIncrease > 0, 'text-warning': statistics.monthCountIncrease <= 0 }">
+              {{ statistics.monthCountIncrease | percent }}
             </div>
           </div>
           <div class="col-auto">
-            <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+            <i class="fas fa-percentage fa-2x text-gray-300"></i>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Pending Requests Card Example -->
-  <div class="col-xl-3 col-md-6 mb-4">
-    <div class="card border-left-warning shadow h-100 py-2">
+  <div class="col-xl-4 col-md-6 mb-4">
+    <div class="card border-left-primary shadow h-100 py-2">
       <div class="card-body">
         <div class="row no-gutters align-items-center">
           <div class="col mr-2">
-            <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Pending Requests</div>
-            <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
+            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Iskanja v prejšnjem tednu</div>
+            <div class="h5 mb-0 font-weight-bold text-gray-800">{{ statistics.previousWeekCount }}</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xl-4 col-md-6 mb-4">
+    <div class="card border-left-primary shadow h-100 py-2">
+      <div class="card-body">
+        <div class="row no-gutters align-items-center">
+          <div class="col mr-2">
+            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Iskanja v tekočem tednu</div>
+            <div class="h5 mb-0 font-weight-bold text-gray-800">{{ statistics.thisWeekCount }}</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xl-4 col-md-6 mb-4">
+    <div class="card border-left-primary shadow h-100 py-2">
+      <div class="card-body">
+        <div class="row no-gutters align-items-center">
+          <div class="col mr-2">
+            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Trend tedenskega iskanja</div>
+            <div class="h5 mb-0 font-weight-bold"
+                 [ngClass]="{ 'text-success': statistics.weekCountIncrease > 0, 'text-warning': statistics.weekCountIncrease <= 0 }">
+              {{ statistics.weekCountIncrease | percent }}
+            </div>
           </div>
           <div class="col-auto">
-            <i class="fas fa-comments fa-2x text-gray-300"></i>
+            <i class="fas fa-percentage fa-2x text-gray-300"></i>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card shadow h-100">
+      <div class="card-header">
+        Prikaz števila iskanj v zadnjih sedmih dneh
+      </div>
+      <div class="card-body">
+        <div class="row no-gutters">
+          <ngx-charts-bar-vertical
+            [scheme]="colorScheme"
+            [results]="data"
+            [gradient]="gradient"
+            [xAxis]="showXAxis"
+            [yAxis]="showYAxis"
+            [showXAxisLabel]="showXAxisLabel"
+            [showYAxisLabel]="showYAxisLabel"
+            [xAxisLabel]="xAxisLabel"
+            [yAxisLabel]="yAxisLabel">
+          </ngx-charts-bar-vertical>
         </div>
       </div>
     </div>
