fixed login screen sizing and sidebar toggle

--- a/src/app/content/login/login.component.html
+++ b/src/app/content/login/login.component.html
@@ -6,7 +6,7 @@
       <h1 class="mt-5 text-white">Lokator gradiva</h1>
     </div>
 
-    <div class="col-6">
+    <div class="col-12 col-lg-6 col-md-8 col-sm-10">
       <div class="card o-hidden border-0 shadow-lg my-5">
         <div class="card-body p-0">
           <!-- Nested Row within Card Body -->
