--- a/src/app/content/admin/libraries/details/floors/details/details.component.html
+++ b/src/app/content/admin/libraries/details/floors/details/details.component.html
@@ -53,7 +53,7 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-12" [class.mt-2]="!first" *ngFor="let rackContent of selectedRack.rack.contents; let index = index; let first = first; let last = last">
+                  <div class="col-12 mb-2" *ngFor="let rackContent of selectedRack.rack.contents; let index = index; let first = first; let last = last">
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <button type="button" class="btn btn-outline-secondary"
