--- a/src/app/content/admin/admin.component.html
+++ b/src/app/content/admin/admin.component.html
@@ -82,7 +82,7 @@
               <i class="fas fa-search fa-fw"></i>
             </a>
             <!-- Dropdown - Messages -->
-            <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" *dropdownMenu>
+            <div class="dropdown-menu p-3 shadow animated--grow-in" *dropdownMenu>
               <form class="form-inline mr-auto w-100 navbar-search">
                 <div class="input-group">
                   <input type="text" class="form-control bg-light border-0 small" placeholder="Išči...">
@@ -104,7 +104,7 @@
 <!--              <span class="badge badge-danger badge-counter">3+</span>-->
 <!--            </a>-->
 <!--            &lt;!&ndash; Dropdown - Alerts &ndash;&gt;-->
-<!--            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated&#45;&#45;grow-in" aria-labelledby="alertsDropdown">-->
+<!--            <div class="dropdown-list dropdown-menu shadow animated&#45;&#45;grow-in" aria-labelledby="alertsDropdown">-->
 <!--              <h6 class="dropdown-header">-->
 <!--                Alerts Center-->
 <!--              </h6>-->
@@ -153,7 +153,7 @@
 <!--              <span class="badge badge-danger badge-counter">7</span>-->
 <!--            </a>-->
 <!--            &lt;!&ndash; Dropdown - Messages &ndash;&gt;-->
-<!--            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated&#45;&#45;grow-in" aria-labelledby="messagesDropdown">-->
+<!--            <div class="dropdown-list dropdown-menu shadow animated&#45;&#45;grow-in" aria-labelledby="messagesDropdown">-->
 <!--              <h6 class="dropdown-header">-->
 <!--                Message Center-->
 <!--              </h6>-->
@@ -212,7 +212,7 @@
               <img class="img-profile rounded-circle" ngxGravatar [email]="authenticatedUser?.username">
             </a>
             <!-- Dropdown - User Information -->
-            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" *dropdownMenu>
+            <div class="dropdown-menu shadow animated--grow-in" *dropdownMenu>
 <!--              <a class="dropdown-item" href="#">-->
 <!--                <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>-->
 <!--                Profile-->
