updated error handling

--- a/src/app/content/search/search.component.html
+++ b/src/app/content/search/search.component.html
@@ -31,7 +31,7 @@
 
     <div class="row mt-5" *ngIf="errorMessage">
       <div class="col-lg-6 offset-lg-3">
-        <div class="alert alert-info" role="alert">
+        <div class="alert alert-danger" role="alert">
           {{errorMessage}}
         </div>
       </div>
