lots of improvements: - display field I value - display additional field I data if present - other minor fixes

--- a/src/app/content/admin/libraries/details/floors/details/details.component.html
+++ b/src/app/content/admin/libraries/details/floors/details/details.component.html
@@ -15,10 +15,15 @@
       </div>
       <div class="card-body">
         <div class="row">
-          <div class="col-12 form-group">
-            <label for="rack-code-identifier">Atribut oznake regalov</label>
-            <input type="text" id="rack-code-identifier" readonly
-                   [(ngModel)]="floor.rackCodeIdentifier" name="rack-code-identifier" class="form-control">
+          <div class="col-6 form-group">
+            <label for="rack-code-attribute-selector">Atribut oznake regalov</label>
+            <input type="text" id="rack-code-attribute-selector" readonly
+                   [(ngModel)]="floor.rackCodeSelector.attribute" name="rack-code-attribute-selector" class="form-control">
+          </div>
+          <div class="col-6 form-group">
+            <label for="rack-code-value-selector">Vrednost atributa oznake regalov</label>
+            <input type="text" id="rack-code-value-selector" readonly
+                   [(ngModel)]="floor.rackCodeSelector.value" name="rack-code-value-selector" class="form-control">
           </div>
         </div>
       </div>
