--- a/src/app/content/admin/libraries/details/floors/add-edit/add-edit.component.html
+++ b/src/app/content/admin/libraries/details/floors/add-edit/add-edit.component.html
@@ -31,15 +31,28 @@
             </div>
 
             <div class="col-12 form-group">
-              <label for="rack-code-identifier">Atribut oznake regalov&nbsp;</label>
-              <i class="fa fa-info-circle"
-                 popover="Atribut, ki določa kateri element v tlorisu je regal, npr. 'id', 'rack-label', 'data-rack-id', ..."
-                 [outsideClick]="true">
-              </i>
-              <input type="text" id="rack-code-identifier" required
-                     [(ngModel)]="floor.rackCodeIdentifier" #rackCodeAttribute="ngModel" name="rack-code-identifier" class="form-control">
-              <div [hidden]="rackCodeAttribute.valid || rackCodeAttribute.pristine" class="invalid-feedback">
-                Podatek je obvezen
+              <div class="row">
+                <div class="col-6 form-group">
+                  <label for="rack-code-attribute-selector">Atribut oznake regalov&nbsp;</label>
+                  <i class="fa fa-info-circle"
+                     popover="Atribut, ki določa kateri element v tlorisu je regal, npr. 'id', 'rack-label', 'data-rack-id', ..."
+                     [outsideClick]="true">
+                  </i>
+                  <input type="text" id="rack-code-attribute-selector" required
+                         [(ngModel)]="floor.rackCodeSelector.attribute" #rackCodeAttributeSelector="ngModel" name="rack-code-attribute-selector" class="form-control">
+                  <div [hidden]="rackCodeAttributeSelector.valid || rackCodeAttributeSelector.pristine" class="invalid-feedback">
+                    Podatek je obvezen
+                  </div>
+                </div>
+                <div class="col-6 form-group">
+                  <label for="rack-code-value-selector">Vrednost atributa oznake regalov&nbsp;</label>
+                  <i class="fa fa-info-circle"
+                     popover="Opcijska vrednost atributa, ki še dodatno določa kateri element v tlorisu je regal, npr. 'id=r.*', 'rack-label=r.*', 'data-rack-id=r.*', ..."
+                     [outsideClick]="true">
+                  </i>
+                  <input type="text" id="rack-code-value-selector"
+                         [(ngModel)]="floor.rackCodeSelector.value" name="rack-code-value-selector" class="form-control">
+                </div>
               </div>
             </div>
 
