--- a/src/app/content/admin/libraries/details/floors/details/details.component.scss
+++ b/src/app/content/admin/libraries/details/floors/details/details.component.scss
@@ -1,3 +1,8 @@
+.form-control.identifier-part::placeholder {
+  //font-style: italic;
+  color: #d1d3e2;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
